--- a/index.html
+++ b/index.html
@@ -23,32 +23,35 @@
 <body>
 
 	<!-- bloc-0 -->
-	<header class="bloc bgc-white l-bloc " id="bloc-0">
-		<div class="container bloc-sm">
-			<nav class="navbar row">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html">
-						<img src="img/agence-la-panthere-monochrome.svg" alt="Logo La Panthère Agence de web design" height="40"/>
-					</a>
-					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-					<ul class="site-navigation nav navbar-nav">
-						<li>
-							<a href="index.html">Accueil</a>
-						</li>							
-						<li>
-							<a href="page2.html">Contact ></a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</div>
+	<header class="container bloc bgc-white l-bloc bloc-sm" id="bloc-0">
+
+		<nav class="navbar">
+
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html">
+					<img src="img/agence-la-panthere-monochrome.svg" alt="Logo La Panthère Agence de web design" height="40"/>
+				</a>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+
+			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+				<ul class="site-navigation nav navbar-nav">
+					<li>
+						<a href="index.html">Accueil</a>
+					</li>							
+					<li>
+						<a href="page2.html">Contact ></a>
+					</li>
+				</ul>
+			</div>
+
+		</nav>
+
 	</header>
 	<!-- bloc-0 END -->
 
@@ -181,7 +184,7 @@
 	<!-- Principal conteneur END -->
 	
 	<!-- Footer - bloc-8 -->
-	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+	<footer class="bloc bgc-atomic-tangerine d-bloc text-center" id="bloc-8">
 
 		<div class="container bloc-sm">
 			<div class="row col-sm-12">
