--- a/page2.html
+++ b/page2.html
@@ -23,32 +23,35 @@
 <body>	
 		
 	<!-- bloc-0 -->
-	<header class="bloc bgc-white l-bloc " id="bloc-0">
-		<div class="container bloc-sm">
-			<nav class="navbar row">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html">
-						<img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" />
-					</a>
-					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-					<ul class="site-navigation nav navbar-nav">
-						<li>
-							<a href="index.html">Accueil</a>
-						</li>
-						<li>
-							<a href="page2.html">page2 ></a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</div>
+	<header class="container bloc bgc-white l-bloc bloc-sm" id="bloc-0">
+
+		<nav class="navbar">
+
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html">
+					<img src="img/agence-la-panthere-monochrome.svg" alt="Logo La Panthère Agence de web design" height="40"/>
+				</a>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+
+			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+				<ul class="site-navigation nav navbar-nav">
+					<li>
+						<a href="index.html">Accueil</a>
+					</li>							
+					<li>
+						<a href="page2.html">Contact ></a>
+					</li>
+				</ul>
+			</div>
+
+		</nav>
+
 	</header>
 	<!-- bloc-0 END -->
 
@@ -110,51 +113,50 @@
 		</a>
 		<!-- ScrollToTop Button END-->
 
+	</main>
+	<!-- Principal conteneur END --> 
 
-		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<div class="container bloc-sm">
-				<div class="row">
-					<div class="col-sm-12">
-						<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html">
-										<span class="fa fa-twitter icon-md"></span>
-									</a>
-								</div>
+	<!-- Footer - bloc-8 -->
+	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<div class="container bloc-sm">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
+					<div class="row row-no-gutters social">
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span class="fa fa-twitter icon-md"></span>
+								</a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html">
-										<span class="fa fa-facebook icon-md"></span>
-									</a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span class="fa fa-facebook icon-md"></span>
+								</a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html">
-										<span class="fa fa-dribbble icon-md"></span>
-									</a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span class="fa fa-dribbble icon-md"></span>
+								</a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html">
-										<span class="fa fa-instagram icon-md"></span>
-									</a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span class="fa fa-instagram icon-md"></span>
+								</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</footer>
-		<!-- Footer - bloc-8 END -->
-
-	</main>
-	<!-- Principal conteneur END -->    
+		</div>
+	</footer>
+	<!-- Footer - bloc-8 END -->  
 
 </body>
 </html>
