--- a/page2.html
+++ b/page2.html
@@ -59,49 +59,50 @@
 	<main class="page-container">
 
 		<!-- bloc-6 -->
-		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-			<div class="container bloc-lg">
-				<div class="col-sm-12 tc-white">
-					<h1 class="hero-bloc-text">Parlons web design !</h1>
-					<p class="mg-lg tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
-					<p class="mg-lg tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
-				</div>
+		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper bloc-lg" id="bloc-6">
+			
+			<div class="col-sm-12 tc-white">
+				<h1 class="hero-bloc-text">Parlons web design !</h1>
+				<p class="mg-lg tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
+				<p class="mg-lg tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
 			</div>
+
 		</section>
 		<!-- bloc-6 END -->
 
 		<!-- bloc-7 -->
-		<section class="bloc bgc-white l-bloc" id="bloc-7">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-6">
-						<form id="form_1">
-							<div class="form-group">
-								<label>Nom</label>
-								<input id="name" class="form-control" required/>
-							</div>
-							<div class="form-group">
-								<label>Adresse email</label>
-								<input id="email" class="form-control" type="email" required/>
-							</div>
-							<div class="form-group">
-								<label>Comment nous avez-vous connu ?</label>
-								<input class="form-control" type="email" required id="input_504"/>
-							</div>
-							<div class="form-group">
-								<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
-								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-							</div> 
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">Envoyer</button>
-						</form>
-					</div>
-					<div class="col-sm-6">
-						<p>contact@agencelapanthere.com</p>
-						<p>2 place Sathonay 69001 Lyon</p>
-						<p>Ouvert de 9h à 18h, du lundi au vendredi</p>						
-					</div>
+		<section class="bloc bgc-white l-bloc bloc-lg" id="bloc-7">			
+
+			<form id="form_1">
+				
+				<div class="form-group">
+					<label>Nom</label>
+					<input id="name" class="form-control" required/>
 				</div>
-			</div>
+
+				<div class="form-group">
+					<label>Adresse email</label>
+					<input id="email" class="form-control" type="email" required/>
+				</div>
+
+				<div class="form-group">
+					<label>Comment nous avez-vous connu ?</label>
+					<input class="form-control" type="email" required id="input_504"/>
+				</div>
+
+				<div class="form-group">
+					<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
+					<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+				</div> 
+
+				<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">Envoyer</button>
+			
+			</form>
+
+			<p>contact@agencelapanthere.com</p>
+			<p>2 place Sathonay 69001 Lyon</p>
+			<p>Ouvert de 9h à 18h, du lundi au vendredi</p>			
+
 		</section>
 		<!-- bloc-7 END -->
 
