--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<a href="index.html">Accueil</a>
 					</li>							
 					<li>
-						<a href="page2.html">Contact></a>
+						<a href="contact.html">Contact></a>
 					</li>
 				</ul>
 			</div>
@@ -59,7 +59,7 @@
 				<div class="col-sm-12">
 					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La Panthère"/>
 					<h1 class="hero-bloc-text tc-white ">Agence La Panthère</h1>
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>						
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>						
 				</div>
 			</div>
 		</section>
@@ -110,7 +110,7 @@
 					<div class="col-sm-12">
 						<h2 class="mg-md tc-white">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.</h2>
 						<p class="white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de <strong>créer un site de A à Z</strong> ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
-						<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>						
+						<a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a>						
 					</div>
 				</div>
 			</div>
@@ -168,7 +168,7 @@
 			<div class="container bloc-lg">
 				<div class="row col-sm-12">
 					<h2 class="mg-md tc-white">Prêt pour redonner vie à votre projet ? Contactez notre équipe !</h2>					
-					<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>					
+					<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>					
 				</div>
 			</div>
 			
