--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 						<span class="icon-bar"></span>
 					</button>
 				</div>
-
 				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 					<ul class="site-navigation nav navbar-nav">
 						<li>
@@ -57,7 +56,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La Panthère"/>
-						<h1 class="hero-bloc-text tc-white ">Agence La Panthère</h1>
+						<h1 class="text-center hero-bloc-text tc-white ">Agence La Panthère</h1>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>	
 						</div>					
@@ -190,32 +189,32 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
-					<div class="row-no-gutters social">
+					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html">
-									<span class="fa fa-twitter icon-md"></span>
+								<a class="social" href="https://twitter.com" target="_blank">
+									<span class="fa fa-twitter icon-md"></span><br/>twitter
 								</a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html">
-									<span class="fa fa-facebook icon-md"></span>
+								<a class="social" href="https://fr-fr.facebook.com" target="_blank">
+									<span class="fa fa-facebook icon-md"></span><br/>facebook
 								</a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html">
-									<span class="fa fa-dribbble icon-md"></span>
+								<a class="social" href="https://dribbble.com" target="_blank">
+									<span class="fa fa-dribbble icon-md"></span><br/>dribbble
 								</a>
 							</div>
 						</div>					
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html">
-									<span class="fa fa-instagram icon-md"></span>
+								<a class="social" href="https://www.instagram.com" target="_blank">
+									<span class="fa fa-instagram icon-md"></span><br/>instagram
 								</a>
 							</div>
 						</div>
