--- a/index.html
+++ b/index.html
@@ -97,14 +97,12 @@
 						<p class="text-center">Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de <strong>graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
 					</article>
 				</div>
-				<figure class="row voffset-lg voffset">
-					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">					
-						<cite>
-							<p>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lignes à Lyon."</p>
-						</cite>
+				<div class="row voffset-lg voffset">
+					<figure class="col-xs-12 col-md-8 col-md-offset-2 text-center">					
+						<cite>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lignes à Lyon."</cite>
 						<figcaption>Maxime Guibard, PDG de À vos fourchettes</figcaption>
-					</div>
-				</figure>
+					</figure>
+				</div>
 			</div>
 		</section>
 		<!-- bloc-2-services END -->
