--- a/contact.html
+++ b/contact.html
@@ -116,24 +116,32 @@
 						<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
-								<a class="social" href="index.html">
-									<span class="fa fa-twitter icon-md"></span>
-								</a>
+								<div class="text-center">
+									<a class="social" href="https://twitter.com" target="_blank">
+										<span class="fa fa-twitter icon-md"></span><br/>twitter
+									</a>
+								</div>
 							</div>
 							<div class="col-sm-3">
-								<a class="social" href="index.html">
-									<span class="fa fa-facebook icon-md"></span>
-								</a>
+								<div class="text-center">
+									<a class="social" href="https://fr-fr.facebook.com" target="_blank">
+										<span class="fa fa-facebook icon-md"></span><br/>facebook
+									</a>
+								</div>
 							</div>
 							<div class="col-sm-3">
-								<a class="social" href="index.html">
-									<span class="fa fa-dribbble icon-md"></span>
-								</a>
-							</div>
+								<div class="text-center">
+									<a class="social" href="https://dribbble.com" target="_blank">
+										<span class="fa fa-dribbble icon-md"></span><br/>dribbble
+									</a>
+								</div>
+							</div>					
 							<div class="col-sm-3">
-								<a class="social" href="index.html">
-									<span class="fa fa-instagram icon-md"></span>
-								</a>
+								<div class="text-center">
+									<a class="social" href="https://www.instagram.com" target="_blank">
+										<span class="fa fa-instagram icon-md"></span><br/>instagram
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
