--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
-						<div class="col-sm-12">
+						<div class="text-center col-sm-12">
 							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La Panthère"/>
 							<h1 class="text-center hero-bloc-text tc-white ">Agence La Panthère</h1>
 							<div class="text-center">
