--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-								<img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Image de matériel photo, vidéo et informatique"/>
+								<img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Image de matériel photo, vidéo et informatique"/>
 							</a>
 							<h3 class="mg-md text-center">Création d'un site internet pour un voyageur</h3>
 							<p class="text-center">Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
 						</div>
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-								<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Photo de préparatif pour un mariage"/>
+								<img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Photo de préparatif pour un mariage"/>
 							</a>
 							<h3 class="mg-md text-center">Conception d'un site pour une agence de mariage</h3>
 							<p class="text-center">Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.</p>
