--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">    
+		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		
 		<title>La Panthère - Formulaire de Contact</title>
 		<meta name="description" content="Formulaire de contact pour la présentation de votre projet à l'agence de Web Design La Panthère">    
@@ -153,8 +153,8 @@
 		<script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 		<script src="./js/blocs.js"></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js"></script>
+		<script src="./js/jqBootstrapValidation.js"></script>
+		<script src="./js/formHandler.js"></script>
 
 	</body>
 </html>
