--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">    
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> 
-		<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-	-->	<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		
@@ -91,7 +90,7 @@
 							</form>
 						</div>
 						<div class="col-sm-6">
-							<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a>
+							<p><a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a></p>
 							<p>2 place Sathonay 69001 Lyon</p>
 							<p>Ouvert de 9h à 18h, du lundi au vendredi</p>	
 						</div>
@@ -153,9 +152,7 @@
 		
 		<script src="./js/jquery-2.1.0.js"></script>
 		<script src="./js/bootstrap.js"></script>
-	<!--<script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-	-->	<script src="./js/blocs.js"></script>
+		<script src="./js/blocs.js"></script>
 		<script src="./js/jqBootstrapValidation.js"></script>
 		<script src="./js/formHandler.js"></script>
 
