--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">    
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> 
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> 
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 		
 		<title>La Panthère - Formulaire de Contact</title>
 		<meta name="description" content="Formulaire de contact pour la présentation de votre projet à l'agence de Web Design La Panthère">    
@@ -150,10 +150,10 @@
 		</footer>
 		<!-- Footer - bloc-8 END -->
 		
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
+		<script src="./js/jquery-2.1.0.min.js"></script>
+		<script src="./js/bootstrap.min.js"></script>
 		<script src="./js/blocs.js"></script>
-		<script src="./js/jqBootstrapValidation.js"></script>
+		<script src="./js/jqBootstrapValidation.min.js"></script>
 		<script src="./js/formHandler.js"></script>
 
 	</body>
