--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">   
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> 
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> 
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 		
 		<title>La Panthère - Agence de Web Design à Lyon</title>
 		<meta name="description" content="La Panthère est une grande agence de Web Design de Lyon, qui aide les entreprise à devenir attractives et visibles sur Internet">    
@@ -224,11 +224,11 @@
 		</footer>
 		<!-- Footer - bloc-8 END -->
 		
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
+		<script src="./js/jquery-2.1.0.min.js"></script>
+		<script src="./js/bootstrap.min.js"></script>
 		<script src="./js/blocs.js"></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js"></script>
+		<script src="./js/jquery.touchSwipe.min.js" defer></script>
+		<script src="./js/gmaps.min.js"></script>
 
 	</body>
 </html>
