--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1 class="text-center hero-bloc-text tc-white">Parlons web design !</h1>
-							<p class="text-center mg-lg tc-white tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
-							<p class="text-center mg-lg tc-white tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
+							<h1 class="text-center hero-bloc-text tc-black">Parlons web design !</h1>
+							<p class="text-center mg-lg tc-black tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
+							<p class="text-center mg-lg tc-black tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
 						</div>
 					</div>
 				</div>
@@ -113,7 +113,7 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center">Agence La Panthère - Agence web basée à Lyon.</p>
+						<p class="text-center">La Panthère - Agence de web design basée à Lyon.</p>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
